# nerv

./: .npmrc  LICENSE-APACHE.txt  License.md  README.md  next.config.mjs  package-lock.json  package.json
NERVCodeV2/: Cargo.toml
NERVCodeV2/src/: lib.rs  main.rs  params.rs
NERVCodeV2/src/consensus/: dispute.rs  mod.rs  predictor.rs  voting.rs
NERVCodeV2/src/crypto/: dilithium.rs  hash.rs  ml_kem.rs  mod.rs  sphincs.rs
NERVCodeV2/src/economy/: encoder_updater.rs  fl_aggregation.rs  mod.rs  rewards.rs  shapley.rs
NERVCodeV2/src/embedding/: encoder.rs  fixed_point.rs  homomorphism.rs  mod.rs
NERVCodeV2/src/embedding/circuit/: delta_circuit.rs  latent_ledger.rs  mod.rs  recursive.rs
NERVCodeV2/src/embedding/models/: generate_lstm_1.1mb.py  generate_predictor_1.8mb.py
NERVCodeV2/src/network/: dht.rs  gossip.rs  mempool.rs  mod.rs
NERVCodeV2/src/privacy/: mixer.rs  mod.rs  vdw.rs
NERVCodeV2/src/privacy/tee/: attestation.rs  mod.rs  sealing.rs  sev.rs  sgx.rs
NERVCodeV2/src/sharding/: bisection.rs  erasure.rs  lstm_predictor.rs  mod.rs
NERVCodeV2/src/tokenomics/: allocation.rs  emission.rs  mod.rs  rewards.rs  vesting.rs
NERVCodeV2/src/utils/: logging.rs  metrics.rs  mod.rs  serialization.rs
NERVCodeV2/src/wallet/: backup.rs  balance.rs  error.rs  history.rs  keys.rs  lib.rs  sdk.rs  sync.rs  tx.rs  types.rs  vdw.rs
NERVCodeV2/tests/integration/: mod.rs  test-blockchain-full-cycle.rs  test_blockchain_workflow.rs  test_consensus_flow.rs  test_economy_ecosystem.rs  test_privacy_protocol.rs  test_sharding_dynamics.rs
NERVCodeV2/tests/unit/: mod.rs  test_consensus.rs  test_crypto.rs  test_economy.rs  test_embedding.rs  test_network.rs  test_privacy.rs  test_sharding.rs  test_tokenomics.rs  test_utils.rs  wallet_backup_tests.rs  wallet_balance_tests.rs  wallet_history_tests.rs  wallet_keys_tests.rs  wallet_sdk_tests.rs  wallet_sync_tests.rs  wallet_tx_tests.rs  wallet_vdw_tests.rs
app/: NeuralBackground.jsx  ParticlesComponent.tsx  globals.css  layout.tsx  next.config.js  page.tsx
